entity_macros/tests/ui/derive/ent/unexpected-ent-typetag-when-not-available.stderr
error: Could not find `typetag` in `dependencies` or `dev-dependencies` in `$WORKSPACE/target/tests/entity_macros/Cargo.toml`!
 --> $DIR/unexpected-ent-typetag-when-not-available.rs:3:17
  |
3 | #[derive(Clone, Ent)]
  |                 ^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
